--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 	 */
 	implementation("com.google.code.gson:gson:2.10.1")
 
+	implementation("org.springframework:spring-test:6.1.4")
+
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
 	implementation 'org.jetbrains.kotlin:kotlin-reflect'
