--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -13,7 +13,12 @@ spring:
     name: PlanIt
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: ${JDBC_DATABASE_URL}
+    username: postgres
+    password: 123
+
+  test_datasource:
+    url: jdbc:postgresql://localhost:5432/PlanItTestDatabase?user=postgres&password=123
     username: postgres
     password: 123
 
