--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "firebase": "^10.12.2",
     "node": "^21.2.0",
     "playwright": "^1.40.1",
     "react-router-dom": "^6.20.1",
