--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     name: PlanIt
 
   datasource:
-    url: jdbc:postgresql://dpg-cpeuehnsc6pc73a4qc40-a.frankfurt-postgres.render.com:5432/planitapi?user=planitapi_user&password=fl4ErLyCceSq8UNyptFyBcNrsOj9vIhA
+    url: jdbc:postgresql://localhost:5432/PlanIt?user=postgres&password=123
     username: postgres
     password: 123
 
